Add new Entities

--- a/DeliveryApp/ClientApp/src/components/DynamicMenu/DynamicMenu.css
+++ b/DeliveryApp/ClientApp/src/components/DynamicMenu/DynamicMenu.css
@@ -39,7 +39,7 @@
             color: #3D3D3D;
         }
 
-.LeftMenu {
+.DynamicMenu {
     background-color: #9A9A9A;
     height: 100%;
     display: block;
